<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.uni_hamburg.corpora</groupId>
    <artifactId>corpus-services</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>corpus-services</name>
    <url>http://maven.apache.org</url>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <!--
            https://stackoverflow.com/questions/574594/how-can-i-create-an-executable-jar-with-dependencies-using-maven
            -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.uni_hamburg.corpora.CorpusMagician</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
            <!-- Doxygen plugin -->
            <plugin>
                <groupId>com.soebes.maven.plugins</groupId>
                <artifactId>doxygen-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <quiet>false</quiet>
                    <projectName>${project.artifactId}</projectName>
                    <projectNumber>${project.version}</projectNumber>
                    <optimizeOutputJava>true</optimizeOutputJava>
                    <extractAll>true</extractAll>
                    <extractStatic>true</extractStatic>
                    <recursive>true</recursive>
                    <exclude>.git</exclude>
                    <recursive>true</recursive>
                    <umlLook>true</umlLook>
                    <haveGraph>true</haveGraph>
                    <generateLatex>false</generateLatex>
                    <generateHtml>true</generateHtml>
                    <outputDirectory>${basedir}/doc</outputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- mainClass>de.uni_hamburg.corpora.CorpusMagician</mainClass-->
                    <mainClass>de.uni_hamburg.corpora.validation.RefcoChecker</mainClass>
                    <!--mainClass>de.uni_hamburg.corpora.validation.ELANValidatorChecker</mainClass-->
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/java/de/uni_hamburg/corpora/validation/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java/de/uni_hamburg/corpora/visualization/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java/de/uni_hamburg/corpora/conversion/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java/de/uni_hamburg/corpora/swing/resources</directory>
	    </resource>
            <resource>
                <directory>src/test/java/de/uni_hamburg/corpora/utilities/resources</directory>
            </resource>
            <resource>
                <directory>src/test/java/de/uni_hamburg/corpora/resources</directory>
            </resource>
        </resources>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.exmaralda</groupId>
            <artifactId>EXMARaLDA</artifactId>
            <version>Preview-20201130</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>nl.mpi</groupId>
            <artifactId>ELAN</artifactId>
            <version>6.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom</artifactId>
            <version>1.1.3</version>
        </dependency>
        <dependency>
            <groupId>net.sf.saxon</groupId>
            <artifactId>Saxon-HE</artifactId>
            <version>9.8.0-6</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>jaxen</groupId>
            <artifactId>jaxen</artifactId>
            <version>1.1.6</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli for validator CLI -->
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.3.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.ini4j/ini4j testing using ini as configuration file format-->
        <dependency>
            <groupId>org.ini4j</groupId>
            <artifactId>ini4j</artifactId>
            <version>0.5.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
        for validator servlet e.g. -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>


        <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.11</version>
        </dependency>

        <!-- https://github.com/phax/ph-schematron -->
        <dependency>
            <groupId>com.helger</groupId>
            <artifactId>ph-schematron</artifactId>
            <version>5.0.1</version>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>

        
        <!-- https://mvnrepository.com/artifact/org.jdom/jdom
         <dependency>
           <groupId>org.jdom</groupId>
           <artifactId>jdom</artifactId>
           <version>2.0.2</version>
         </dependency>
        -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>4.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.languagetool</groupId>
            <artifactId>language-de</artifactId>
            <version>4.2</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
            <type>jar</type>
        </dependency>
    </dependencies>
</project>
